Fix button alignment :heavy_check_mark:

--- a/14_clipboard-landing-page-master/app/scss/_styles.scss
+++ b/14_clipboard-landing-page-master/app/scss/_styles.scss
@@ -38,6 +38,7 @@ header {
     margin-bottom: 2.4rem;
     @include responsive(phone) {
       padding: 0 5rem;
+      text-align: center;
     }
   }
 }
@@ -108,6 +109,9 @@ section.feature1 {
         }
         p {
           line-height: 1.8;
+          @include responsive(desktop) {
+            text-align: left;
+          }
           @include responsive(phone) {
             padding: 0 5rem;
           }
@@ -242,9 +246,8 @@ footer {
 .download-btn {
   width: 100%;
   margin-top: 5rem;
-  @include responsive(phone) {
-    text-align: center;
-  }
+  cursor: pointer;
+  text-align: center;
 
   button {
     font-size: 2.25rem;
@@ -261,5 +264,8 @@ footer {
   }
   &--blue {
     background-color: $lightBlue;
+  }
+  button:hover {
+    opacity: 0.7;
   }
 }
